--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ ul.menu li a:hover {
 /*Main*/
 .main {
 	width: 940px;
-	padding: 20px 20px 270px;
+	padding: 20px 20px ;
 	overflow: hidden;
 	background-color: white;
 	margin: 0 auto;
@@ -639,79 +639,22 @@ ul.img li:hover {
 	border: 1px solid #95161f;
 }
 /*Footer*/
-.footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	background: #e7e4e4 url("images/bg-footer.png") repeat;
-	border-top: 10px solid #9c4757;
-	height: 230px;
-	overflow: hidden;
-}
 
-.footerContent {
-	padding: 10px;
-	color: white;
-	width: 960px;
-	margin: 0 auto;
-	font-size: 12px;
-	color: #85898f;
-	overflow: hidden;
-}
-
-.footerContent p {
-	margin: 7px 0;
-}
-
-.footerContent p strong {
-	font-size: 14px;
-	color: #a5adb8;
-}
-
-.footerContent a {
-	color: #d08b98;
-}
-
-.footerContent .borderBottom {
-	width: 270px;
-	height: 1px;
-	background-color: #191c20;
-	border-bottom: 1px solid #40474f;
-	margin-top: 5px;
-}
-
-.footerContent ul.clock {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
 
 ul.clock li {
 	background: url("images/clock.png") left center no-repeat;
 	padding-left: 20px;
 	margin-top: 7px;
 }
-/*Social*/
-.social {
-	font-size: 12px;
-	margin-right: 20px;
+
+
+.imgtables {
+	display: flex;
+	flex-direction: column;
+	width: 90%;
+	
 }
 
-.social>div {
-	display: block;
-	float: left;
-	margin: 18px 5px 0 0;
-}
-
-.social ul {
-	display: inline-block;
-	margin: 15px 0 0 0;
-	padding: 0;
-	list-style: none;
-	float: left;
-}
-
-.social ul li {
-	float: left;
-	margin-right: 5px;
+.imgtables img {
+	padding: 10px 20%;
 }
